# Models/UserSchema.js
@@ -13,7 +13,7 @@ const UserSchema = new mongoose.Schema(
     },
     username: {
       type: String,
-      required: [true , "please enter the username"],
+      // required: [true , "please enter the username"],
       trim: true,
       maxlength: 50,
       unique : true,
@@ -70,14 +70,15 @@ const UserSchema = new mongoose.Schema(
 );
 
 UserSchema.methods.comparePassword = function (enteredPassword) {
-  return bcrypt.compare(enteredPassword, this.password);
+  return  bcrypt.compare(enteredPassword, this.password);
 };
 
 UserSchema.pre("save", async function (next) {
-  if(this.isModified('password')){
-    this.password = bcrypt.hash(this.password , 10)
+  if (this.isModified("password")) {
+    this.password = await bcrypt.hash(this.password, 10);
   }
   next();
-})
+});
+
 
 module.exports = mongoose.model("users", UserSchema);
